# teamB_section_9

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  openapi.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37168f27136b_add_coordinate_image_url_to_outfits.py  37168f27136b_add_courage_image_url_to_outfits.py  3cc49142ccf6_change_weather_summary_to_text.py  62bcff165381_create_users_table.py  a1b2c3d4e5f6_outfit_items_hybrid_persistence.py  b7d3a1c9e2f4_make_clothes_image_url_nullable.py  c3f1a2b4d5e6_create_llm_usage_logs.py  da09de1d5720_add_secondary_region_code_to_users.py
backend/app/: main.py
backend/app/constants/: regions.py
backend/app/core/: config.py  deps.py  logging.py  redis.py  security.py
backend/app/db/: session.py
backend/docs/: redis-cache.md
backend/jobs/: generate_outfits_for_all_users.py
backend/scripts/: check_api_contract.py  seed_bypass_clothes.py  seed_bypass_user.py
backend/tests/: conftest.py  test_api_contract.py  test_app_config.py  test_auth.py  test_clothes.py  test_cors.py  test_health.py  test_image_client.py  test_image_prompt_builder.py  test_llm_client.py  test_llm_usage_crud.py  test_outfit_batch_job.py  test_outfit_crud.py  test_outfit_image_service.py  test_outfits.py  test_redis.py  test_regions.py  test_security.py  test_seed_bypass_clothes.py  test_seed_bypass_user.py  test_storage_client.py  test_usage.py  test_users_crud.py  test_weather.py
(+130 files in other folders)
