[project]
name = "closet-management-backend"
version = "0.1.0"
description = "Backend API for Closet Management"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi==0.136.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]==0.49.0",
    "pydantic>=2.0",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "openai>=2.40.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "pip-audit>=2.7",
    "ruff>=0.4.0",
    "openapi-spec-validator>=0.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/constants/regions.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
